RESOLVED FIXED98355
[GTK] accessibility/aria-link-supports-press.html is failing
https://bugs.webkit.org/show_bug.cgi?id=98355
Summary [GTK] accessibility/aria-link-supports-press.html is failing
Zan Dobersek
Reported 2012-10-04 00:33:51 PDT
Attachments
patch (3.78 KB, patch)
2013-11-07 07:40 PST, Krzysztof Czech
no flags
Krzysztof Czech
Comment 1 2013-11-07 07:39:37 PST
Proposing a patch that checks whether link elements support press action. Link elements support "jump" action. We can consider that "jump" action occurs when link is clicked/pressed.
Krzysztof Czech
Comment 2 2013-11-07 07:40:42 PST
WebKit Commit Bot
Comment 3 2013-11-08 02:22:39 PST
Comment on attachment 216301 [details] patch Clearing flags on attachment: 216301 Committed r158913: <http://trac.webkit.org/changeset/158913>
WebKit Commit Bot
Comment 4 2013-11-08 02:22:41 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.