[GTK] accessibility/aria-link-supports-press.html is failing https://bugs.webkit.org/show_bug.cgi?id=98355

Patch by Krzysztof Czech <k.czech@samsung.com> on 2013-11-08
Reviewed by Mario Sanchez Prada.

Tools:

Checking "jump" action for link elements. Action "jump" occurs when a link
element is pressed/clicked.

* DumpRenderTree/atk/AccessibilityUIElementAtk.cpp:
(AccessibilityUIElement::isPressActionSupported):
* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::isPressActionSupported):

LayoutTests:

Removed failure expectation.

* platform/gtk/TestExpectations: test is no longer failing.

Canonical link: https://commits.webkit.org/142220@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158913 268f45cc-cd09-0410-ab3c-d52691b4dbfc