Tools/DumpRenderTree/atk/AccessibilityUIElementAtk.cpp
@@ -907,7 +907,8 @@ bool AccessibilityUIElement::isPressActionSupported()
     if (!ATK_IS_ACTION(m_element))
         return false;
 
-    return equalIgnoringCase(atk_action_get_name(ATK_ACTION(m_element), 0), String("press"));
+    const gchar* actionName = atk_action_get_name(ATK_ACTION(m_element), 0);
+    return equalIgnoringCase(actionName, String("press")) || equalIgnoringCase(actionName, String("jump"));
 }
 
 bool AccessibilityUIElement::isIncrementActionSupported()
